@@ -697,6 +697,7 @@ wxMSW:
 - Return more native shell icons from wxArtProvider (Markus Juergens).
 - Fix filter checks in wxDir::FindFirst/Next() (Catalin Raceanu).
 - Add support for wxICON_AUTH_NEEDED to wxMessageDialog (Chris Spencer).
+- Fix printing too many copies of the document in some cases (John Roberts).
 
 wxOSX/Cocoa:
 
